--- a/buyer.html
+++ b/buyer.html
@@ -2,13 +2,7 @@
 <html>
 <head>
 
-<meta charset="UTF-8">
-
-<meta name="viewport"
-content="width=device-width,
-initial-scale=1,
-maximum-scale=1,
-viewport-fit=cover">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>PetalRush Buyer</title>
 
@@ -16,7 +10,7 @@ viewport-fit=cover">
 
 <style>
 
-/* ---------- RESET ---------- */
+/* ================= GLOBAL ================= */
 
 *{
 box-sizing:border-box;
@@ -24,100 +18,86 @@ margin:0;
 padding:0;
 }
 
-html,body{
-height:100%;
-width:100%;
+body{
 font-family:system-ui,-apple-system,Segoe UI,Roboto;
 background:#f4f6f8;
-overflow-x:hidden;
+color:#222;
+}
+
+:root{
+--primary:#ff4081;
+--card:#ffffff;
+--shadow:0 4px 14px rgba(0,0,0,0.08);
 }
 
 
-/* ---------- CONTAINER ---------- */
+/* ================= CONTAINER ================= */
 
 .container{
-
 width:100%;
 max-width:500px;
-min-height:100vh;
-
 margin:auto;
-
+min-height:100vh;
 background:#f4f6f8;
-
-display:flex;
-flex-direction:column;
-
 position:relative;
-
+padding-bottom:80px;
 }
-
-
-/* DESKTOP CENTER MODE */
 
 @media(min-width:700px){
 
 .container{
-
 margin-top:20px;
 margin-bottom:20px;
-
 border-radius:14px;
-
-box-shadow:0 0 30px rgba(0,0,0,0.12);
-
-min-height:90vh;
-
+box-shadow:0 0 40px rgba(0,0,0,0.12);
 }
 
 }
 
 
-/* ---------- HEADER ---------- */
+/* ================= HEADER ================= */
 
 .header{
-
-background:white;
-
-padding:14px clamp(12px,4vw,18px);
-
-box-shadow:0 2px 12px rgba(0,0,0,0.08);
 
 position:sticky;
 top:0;
 z-index:100;
 
+background:white;
+
+padding:12px;
+
+box-shadow:var(--shadow);
+
+display:flex;
+align-items:center;
+gap:10px;
+
 }
 
-.location{
+.logo{
 
-font-size:clamp(16px,4vw,20px);
-font-weight:600;
+height:34px;
 
 }
 
 .search{
 
-margin-top:8px;
+flex:1;
 
 }
 
 .search input{
 
 width:100%;
-
-padding:clamp(10px,3vw,14px);
-
-font-size:clamp(14px,3.5vw,16px);
-
+padding:10px;
 border-radius:10px;
-
 border:1px solid #ddd;
 
 }
 
 
-/* ---------- PRODUCTS ---------- */
+/* ================= PRODUCTS ================= */
 
 .products{
 
@@ -125,23 +105,18 @@ display:grid;
 
 grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
 
-gap:clamp(10px,3vw,16px);
+gap:12px;
 
-padding:clamp(12px,3vw,16px);
-
-padding-bottom:90px;
+padding:12px;
 
 }
 
 .card{
 
 background:white;
-
 border-radius:12px;
-
 padding:10px;
-
-box-shadow:0 3px 12px rgba(0,0,0,0.08);
+box-shadow:var(--shadow);
 
 }
 
@@ -156,14 +131,14 @@ border-radius:10px;
 
 .card h3{
 
-font-size:clamp(14px,3.5vw,17px);
-margin-top:6px;
+font-size:15px;
+margin-top:5px;
 
 }
 
 .price{
 
-color:#ff4081;
+color:var(--primary);
 font-weight:bold;
 
 }
@@ -171,32 +146,32 @@ font-weight:bold;
 .btn{
 
 width:100%;
-padding:12px;
-background:#ff4081;
+padding:9px;
+margin-top:6px;
+background:var(--primary);
 color:white;
 border:none;
-border-radius:10px;
-font-size:15px;
-margin-top:6px;
+border-radius:8px;
+cursor:pointer;
 
 }
 
 
-/* ---------- PROFILE ---------- */
+/* ================= PROFILE ================= */
 
 .profile{
 
 display:none;
-padding:14px;
-padding-bottom:90px;
+padding:12px;
 
 }
 
 .profile-card{
 
 background:white;
-padding:18px;
+padding:14px;
 border-radius:12px;
+box-shadow:var(--shadow);
 text-align:center;
 
 }
@@ -210,78 +185,98 @@ object-fit:cover;
 
 }
 
-.input{
-
-width:100%;
-padding:12px;
-border-radius:10px;
-border:1px solid #ddd;
-margin-top:8px;
-
-}
-
 .menu{
 
-margin-top:12px;
 background:white;
+margin-top:12px;
 border-radius:12px;
+box-shadow:var(--shadow);
 
 }
 
 .menu-item{
 
-padding:16px;
+padding:14px;
 border-bottom:1px solid #eee;
+cursor:pointer;
 
 }
 
 
-/* ---------- ADDRESS ---------- */
+/* ================= ADDRESS ================= */
 
 .address{
 
 display:none;
-padding:14px;
+padding:12px;
+
+}
+
+.input{
+
+width:100%;
+padding:10px;
+border-radius:8px;
+border:1px solid #ddd;
+margin-bottom:10px;
 
 }
 
 
-/* ---------- HELP ---------- */
+/* ================= HELP ================= */
 
 .help{
 
 display:none;
-padding:14px;
+padding:12px;
 
 }
 
 .help-card{
 
 background:white;
-padding:18px;
+padding:14px;
 border-radius:12px;
+box-shadow:var(--shadow);
 
 }
 
 
-/* ---------- CART ---------- */
+/* ================= CART ================= */
 
 .cart{
 
 display:none;
-padding:14px;
+padding:12px;
+
+}
+
+.cart-item{
+
+background:white;
+padding:10px;
+margin-bottom:10px;
+border-radius:10px;
+box-shadow:var(--shadow);
+
+}
+
+.bill{
+
+background:white;
+padding:12px;
+border-radius:12px;
+box-shadow:var(--shadow);
 
 }
 
 
-/* ---------- BOTTOM NAV ---------- */
+/* ================= FOOTER ================= */
 
 .bottom{
 
 position:fixed;
-
 bottom:0;
-
 width:100%;
 max-width:500px;
 
@@ -290,15 +285,14 @@ background:white;
 display:flex;
 justify-content:space-around;
 
-padding:12px;
+padding:10px;
 
-box-shadow:0 -3px 15px rgba(0,0,0,0.08);
+box-shadow:0 -3px 14px rgba(0,0,0,0.12);
 
 }
 
 .nav{
 
-font-size:15px;
 cursor:pointer;
 
 }
@@ -306,9 +300,7 @@ cursor:pointer;
 </style>
 
 </head>
-
 <body>
-
 
 <div class="container">
 
@@ -317,22 +309,21 @@ cursor:pointer;
 
 <div class="header">
 
-<div class="location">
-Mumbai
-</div>
+<img src="logoHeader.png" class="logo">
 
 <div class="search">
-<input placeholder="Search flowers">
-</div>
+
+<input placeholder="Search flowers"
+oninput="searchProduct(this.value)">
 
 </div>
 
+</div>
 
 
 <!-- PRODUCTS -->
 
 <div id="home" class="products"></div>
-
 
 
 <!-- PROFILE -->
@@ -341,12 +332,14 @@ Mumbai
 
 <div class="profile-card">
 
-<img id="avatar" class="avatar"
+<img id="avatar"
+class="avatar"
 src="https://via.placeholder.com/90">
 
 <br><br>
 
-<input type="file" onchange="uploadAvatar(event)">
+<input type="file"
+onchange="uploadAvatar(event)">
 
 <h3 id="username"></h3>
 
@@ -354,9 +347,15 @@ src="https://via.placeholder.com/90">
 class="input"
 placeholder="Edit name">
 
+<input id="phoneInput"
+class="input"
+placeholder="Phone">
+
 <button class="btn"
 onclick="saveProfile()">
+
 Save Profile
+
 </button>
 
 </div>
@@ -366,47 +365,62 @@ Save Profile
 
 <div class="menu-item"
 onclick="openAddress()">
+
 My Address
+
+</div>
+
+<div class="menu-item"
+onclick="openOrders()">
+
+Orders
+
 </div>
 
 <div class="menu-item"
 onclick="openHelp()">
+
 Help & Support
+
 </div>
 
 <div class="menu-item"
 onclick="logout()">
+
 Logout
-</div>
 
 </div>
 
 </div>
 
+</div>
 
 
 <!-- ADDRESS -->
 
 <div id="address" class="address">
 
-<h3>Save Address</h3>
+<h3>Address</h3>
 
 <input id="addressInput"
 class="input"
 placeholder="Enter address">
 
 <button class="btn"
-onclick="getGPS()">
+onclick="useGPS()">
+
 Use GPS
+
 </button>
 
 <button class="btn"
 onclick="saveAddress()">
+
 Save Address
+
 </button>
 
 </div>
-
 
 
 <!-- HELP -->
@@ -421,40 +435,39 @@ Save Address
 
 <p id="supportPhone"></p>
 
-</div>
+<textarea id="helpMsg"
+class="input"
+placeholder="Message"></textarea>
+
+<button class="btn"
+onclick="sendHelp()">
+
+Send
+
+</button>
 
 </div>
 
+</div>
 
 
 <!-- CART -->
 
-<div id="cart" class="cart">
-
-<h3>Cart coming soon</h3>
-
-</div>
+<div id="cart" class="cart"></div>
 
 
-
-<!-- NAV -->
+<!-- FOOTER -->
 
 <div class="bottom">
 
 <div class="nav"
-onclick="showHome()">
-Home
-</div>
+onclick="showHome()">Home</div>
 
 <div class="nav"
-onclick="showProfile()">
-Profile
-</div>
+onclick="showProfile()">Profile</div>
 
 <div class="nav"
-onclick="showCart()">
-Cart
-</div>
+onclick="showCart()">Cart</div>
 
 </div>
 
@@ -466,28 +479,25 @@ Cart
 <script>
 
 
-const SUPABASE_URL="https://lssjsgfppehhclxqulso.supabase.co";
+// SUPABASE
 
-const SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0";
+const url="https://lssjsgfppehhclxqulso.supabase.co";
 
-const client=supabase.createClient(
-SUPABASE_URL,
-SUPABASE_KEY
-);
+const key="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0";
 
-
-const user=
-JSON.parse(localStorage.getItem("user"));
-
-if(!user){
-
-location="index.html";
-
-}
-
-username.innerText=user.email;
+const client=supabase.createClient(url,key);
 
 
+// USER
+
+const user=JSON.parse(localStorage.getItem("user"));
+
+document.getElementById("username").innerText=user.email;
+
+
+// LOAD PRODUCTS
+
+let allProducts=[];
 
 async function loadProducts(){
 
@@ -495,11 +505,21 @@ const {data}=await client
 .from("products")
 .select("*");
 
-home.innerHTML="";
+allProducts=data;
+
+showProducts(data);
+
+}
+
+function showProducts(data){
+
+const div=document.getElementById("home");
+
+div.innerHTML="";
 
 data.forEach(p=>{
 
-home.innerHTML+=`
+div.innerHTML+=`
 
 <div class="card">
 
@@ -509,7 +529,12 @@ home.innerHTML+=`
 
 <div class="price">₹${p.price}</div>
 
-<button class="btn">Add</button>
+<button class="btn"
+onclick="addCart('${p.id}')">
+
+Add
+
+</button>
 
 </div>
 
@@ -522,14 +547,97 @@ home.innerHTML+=`
 loadProducts();
 
 
+// SEARCH
+
+function searchProduct(q){
+
+const filtered=allProducts.filter(p=>
+p.name.toLowerCase().includes(q.toLowerCase())
+);
+
+showProducts(filtered);
+
+}
+
+
+// CART
+
+let cart=[];
+
+function addCart(id){
+
+const p=allProducts.find(x=>x.id==id);
+
+cart.push(p);
+
+alert("Added");
+
+}
+
+function showCart(){
+
+hideAll();
+
+cartDiv=document.getElementById("cart");
+
+cartDiv.style.display="block";
+
+let total=0;
+
+cartDiv.innerHTML="";
+
+cart.forEach(p=>{
+
+total+=p.price;
+
+cartDiv.innerHTML+=`
+
+<div class="cart-item">
+
+${p.name} ₹${p.price}
+
+</div>
+
+`;
+
+});
+
+let gst=total*0.05;
+
+let delivery=40;
+
+let grand=total+gst+delivery;
+
+cartDiv.innerHTML+=`
+
+<div class="bill">
+
+Total ₹${total}<br>
+
+GST ₹${gst}<br>
+
+Delivery ₹${delivery}<br>
+
+<b>Grand ₹${grand}</b>
+
+</div>
+
+`;
+
+}
+
+
+// PROFILE
 
 async function saveProfile(){
 
-const name=nameInput.value;
+await client.from("users")
+.update({
 
-await client
-.from("users")
-.update({name})
+name:nameInput.value,
+phone:phoneInput.value
+
+})
 .eq("email",user.email);
 
 alert("Saved");
@@ -537,6 +645,7 @@ alert("Saved");
 }
 
 
+// AVATAR
 
 async function uploadAvatar(e){
 
@@ -546,45 +655,37 @@ await client.storage
 .from("avatars")
 .upload(user.email,file,{upsert:true});
 
-avatar.src=
-SUPABASE_URL+
+avatar.src=url+
 "/storage/v1/object/public/avatars/"+user.email;
 
 }
 
 
+// ADDRESS
 
-async function saveAddress(){
-
-const address=
-addressInput.value;
-
-await client
-.from("users")
-.update({address})
-.eq("email",user.email);
-
-alert("Address Saved");
-
-}
-
-
-
-function getGPS(){
+function useGPS(){
 
 navigator.geolocation.getCurrentPosition(pos=>{
 
 addressInput.value=
-"https://maps.google.com/?q="+
-pos.coords.latitude+
-","+
-pos.coords.longitude;
+`https://maps.google.com/?q=${pos.coords.latitude},${pos.coords.longitude}`;
 
 });
 
 }
 
+async function saveAddress(){
 
+await client.from("users")
+.update({address:addressInput.value})
+.eq("email",user.email);
+
+alert("Saved");
+
+}
+
+
+// HELP
 
 async function openHelp(){
 
@@ -598,12 +699,26 @@ const {data}=await client
 .single();
 
 supportEmail.innerText=data.email;
-
 supportPhone.innerText=data.phone;
 
 }
 
+async function sendHelp(){
 
+await client.from("help")
+.insert({
+
+email:user.email,
+message:helpMsg.value
+
+});
+
+alert("Sent");
+
+}
+
+
+// NAV
 
 function hideAll(){
 
@@ -615,47 +730,22 @@ help.style.display="none";
 
 }
 
-
-
 function showHome(){
 
 hideAll();
-
 home.style.display="grid";
 
 }
 
-
-
 function showProfile(){
 
 hideAll();
-
 profile.style.display="block";
 
 }
 
 
-
-function showCart(){
-
-hideAll();
-
-cart.style.display="block";
-
-}
-
-
-
-function openAddress(){
-
-hideAll();
-
-address.style.display="block";
-
-}
-
-
+// LOGOUT
 
 function logout(){
 
@@ -665,9 +755,7 @@ location="index.html";
 
 }
 
-
 </script>
-
 
 </body>
 </html>
